fix(Fab): other elements ahead of fab

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body class="h-full">
     <div id="root" class="h-full bg-gray-0"></div>
+    <div id="radix-root" class="relative z-[5]"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
